--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,10 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.eclipse.plugin.version>2.10</maven.eclipse.plugin.version>
-		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
+		<maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
 		<maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
+		<junit-platform.version>5.7.2</junit-platform.version>
+		<maven-surefire-version>3.0.0-M4</maven-surefire-version>
 	</properties>
 
 	<dependencies>
@@ -33,13 +35,18 @@
 			<artifactId>snappy-java</artifactId>
 			<version>1.1.8.4</version>
 		</dependency>
-
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.4</version>
-			<scope>test</scope>
-		</dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-platform.version}</version>
+            <scope>test</scope>
+        </dependency>
 	</dependencies>
 
 	<build>
@@ -99,6 +106,22 @@
 					</execution>
 				</executions>
 			</plugin>
+			<plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-version}</version> 
+                <configuration>
+        			<reuseForks>true</reuseForks> 
+        		</configuration>               
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-failsafe-plugin</artifactId>
+                <version>${maven-surefire-version}</version>
+                 <configuration>
+        			<reuseForks>true</reuseForks> 
+        		</configuration>                 
+            </plugin>
 		</plugins>
 	</build>
 
