--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
 		<maven.eclipse.plugin.version>2.10</maven.eclipse.plugin.version>
-		<maven.compiler.plugin.version>3.8.0</maven.compiler.plugin.version>
+		<maven.compiler.plugin.version>3.8.1</maven.compiler.plugin.version>
 		<maven.assembly.plugin.version>3.3.0</maven.assembly.plugin.version>
 		<junit-platform.version>5.7.2</junit-platform.version>
 		<maven-surefire-version>3.0.0-M4</maven-surefire-version>
@@ -28,12 +28,6 @@
 			<groupId>org.pp</groupId>
 			<artifactId>QueryEngine</artifactId>
 			<version>1.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.xerial.snappy/snappy-java -->
-		<dependency>
-			<groupId>org.xerial.snappy</groupId>
-			<artifactId>snappy-java</artifactId>
-			<version>1.1.8.4</version>
 		</dependency>
 		<dependency>
             <groupId>org.junit.jupiter</groupId>
@@ -109,19 +103,18 @@
 			<plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
-                <version>${maven-surefire-version}</version> 
-                <configuration>
-        			<reuseForks>true</reuseForks> 
-        		</configuration>               
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-failsafe-plugin</artifactId>
-                <version>${maven-surefire-version}</version>
-                 <configuration>
-        			<reuseForks>true</reuseForks> 
-        		</configuration>                 
-            </plugin>
+                <version>3.0.0-M5</version>
+            <configuration>
+                <properties>
+                    <configurationParameters>
+                        junit.jupiter.conditions.deactivate = *
+                        junit.jupiter.extensions.autodetection.enabled = true
+                        junit.jupiter.testinstance.lifecycle.default = per_class
+                        junit.jupiter.execution.parallel.enabled = false
+                    </configurationParameters>
+                </properties>
+            </configuration>                          
+            </plugin>           
 		</plugins>
 	</build>
 
